--- a/app/src/main/res/layout/activity_statistic.xml
+++ b/app/src/main/res/layout/activity_statistic.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:gravity="center"
         android:text="Compare Realm vs Sqlite"
         android:layout_margin="16dp"
         android:textAppearance="?android:attr/textAppearanceMedium" />
